<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <!-- title -->
    <TextView
    android:id="@+id/createTitle"
    android:text="@string/loginTitle"
        style="@style/MyHeadingStyle"
    />

    <LinearLayout
        android:id="@+id/LinearLayout_Create"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/aboutTitle"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="50dp">

        <ImageView
            android:id="@+id/logInIMG"
            android:layout_marginTop="20dp"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/legoninja"/>


    <!-- login -->
        <TextView
        android:id="@+id/userNameLbl"
        android:text="@string/usernameLbl"
        android:textSize="16sp"
        android:layout_below="@+id/logInIMG"
        android:layout_alignStart="@+id/enterNameTxt"
            style="@style/myTextViewsNINJA" />

        <EditText
        android:id="@+id/enterUserName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameLbl"
        android:layout_alignStart="@+id/nameLbl"
        android:inputType="textPersonName"
        android:hint="@string/enter_your_loginTxt"
        android:ems="10"
            style="@style/EditTextStyle"
        />


        <!-- password -->
        <TextView
            android:id="@+id/passwordLbl"
            android:text="@string/passwordLbl"
            android:textSize="16sp"
            android:layout_below="@+id/enterUserName"
            android:layout_alignStart="@+id/enterNameTxt"
            style="@style/myTextViewsNINJA"/>

        <EditText
            android:id="@+id/passwordLoginTxt"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordLbl"
            android:layout_alignStart="@+id/nameLbl"
            android:inputType="textPassword"
            android:hint="@string/enter_your_passwordTxt"
            android:ems="10"
            style="@style/EditTextStyle"
            />

        <!-- recover password -->
        <LinearLayout
            android:id="@+id/LLrecoverPassword"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/passwordLoginTxt">

        <TextView
            android:id="@+id/forgotPasswordTxt"
            style="@style/myTextViewsNINJA"
            android:text="@string/forgot_your_passwordTxt" />

        <TextView
            android:id="@+id/recoverPassword"
            android:layout_marginLeft="10dp"
            android:layout_alignStart="@+id/forgotPasswordTxt"
            android:layout_alignParentBottom="true"
            android:text="@string/recover_passwordLink"
            style="@style/myTextViewsNINJA"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="18sp" />
        </LinearLayout>




    </LinearLayout>

    <Button
        android:id="@+id/LogInBTN"
        android:text="@string/log_in"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/createTitle"
        style="@style/myButtonsNINJA"
        android:onClick="logInToAccount"/>

    <Button
        android:id="@+id/cancelBtn"
        android:text="@string/cancelBtn"

        style="@style/myButtonsNINJA"
        android:onClick="returnToWelcomeScreen"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/LinearLayout_Create" />


</RelativeLayout>
    </ScrollView>