<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <!-- Title -->
    <TextView
        android:id="@+id/quizResultsTitle"
        android:text="@string/quiz_resultsTitle"
        style="@style/MyHeadingStyle" />

    <!-- Text fields -->
    <TextView
        android:id="@+id/congrats"
        android:text="@string/congratulations"
        android:textColor="@color/h2Title"
        android:textStyle="bold"
        android:textSize="26sp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/quizResultsTitle"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/results"
        android:text="@string/resultsLbl"
        style="@style/myTextViewsNINJA"
        android:layout_below="@+id/congrats"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
         />

    <TextView
        android:id="@+id/timeTaken"
        android:text="10:11:23"
        style="@style/myTextViewsNINJA"
        android:layout_alignBottom="@+id/time_takenLBL"
        android:layout_toEndOf="@+id/results"
        android:layout_marginStart="15dp"
         />

    <ImageView
        android:id="@+id/thumbsUp"
        android:layout_width="180dp"
        android:layout_marginLeft="15dp"
        android:layout_height="180dp"
        android:layout_below="@+id/congrats"
        android:layout_toEndOf="@+id/timeTaken"
        android:layout_alignParentRight="true"
        app:srcCompat="@drawable/thumbsupninja" />

    <TextView
        android:id="@+id/time_takenLBL"
        android:text="@string/timeLBL"
        style="@style/myTextViewsNINJA"
        android:layout_below="@+id/results"
        android:layout_alignStart="@+id/results"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/pointLBL"
        android:text="@string/pointsLBL"
        style="@style/myTextViewsNINJA"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/time_takenLBL"
        android:layout_alignStart="@+id/time_takenLBL" />

    <TextView
        android:id="@+id/quizResultsDescription"
        android:text="@string/resultsLevelDescription"
        android:layout_below="@+id/thumbsUp"
        android:layout_alignParentEnd="true"
        style="@style/textDescriptionStyle"/>

    <!-- Buttons -->
    <Button
        android:id="@+id/continueBtn"
        android:text="@string/continueBtn"
        android:layout_below="@+id/quizResultsDescription"
        android:layout_centerHorizontal="true"
        style="@style/myButtonsNINJA"
        android:onClick="returnToHome"
         />

    <TextView
        android:id="@+id/pointsAmount"
        android:text="122"
        style="@style/myTextViewsNINJA"
        android:layout_alignBaseline="@+id/pointLBL"
        android:layout_alignBottom="@+id/pointLBL"
        android:layout_alignEnd="@+id/timeTaken" />


</RelativeLayout>
</ScrollView>